# rust-bunny

./: .containerignore  .gitignore  Cargo.toml  Containerfile  PLAN.md  README.md  README.vi.md  build-release.sh  compose.yml  dev
crates/bunny-app/: Cargo.toml
crates/bunny-app/src/: backup.rs  database.rs  home.rs  lib.rs
crates/bunny-cli/: Cargo.toml
crates/bunny-cli/src/: main.rs
crates/bunny-core/: Cargo.toml
crates/bunny-core/src/: lib.rs  operations.rs
crates/bunny-web/: Cargo.toml
crates/bunny-web/src/: lib.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/scripts/: generate-request-examples.mjs
web/src/: App.svelte  app.css  main.ts  types.ts
web/src/components/: AdminResourceView.svelte  CredentialManager.svelte  DashboardView.svelte  OperationRunner.svelte  SettingsView.svelte  StructuredRequestForm.svelte  TokenManager.svelte
