[workspace]
members = [
  "crates/bunny-core",
  "crates/bunny-app",
  "crates/bunny-web",
  "crates/bunny-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
hex = "0.4"
http = "1.3"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
open = "5.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rpassword = "7.4"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
rust-embed = "8.7"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit", "request-id", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
zeroize = "1.8"
